# docker-ui-app

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build-deb.sh  build-rpm.sh  build.rs  clean-builds.sh  docker-ui.spec.template
assets/: icon.icns
examples/: remote_docker_test.rs  ssh_monitor.rs  ssh_test.rs
src/: chart.rs  config.rs  docker.rs  docker_remote.rs  lib.rs  list_containers.rs  list_images.rs  list_networks.rs  list_volumes.rs  main.rs  ssh_persistence.rs  ssh_ui_integration.rs  ui.rs
src/docker/: mod.rs  types.rs
src/remote/: docker_remote.rs  manager.rs  mod.rs
src/ssh/: client.rs  config.rs  connection.rs  error.rs  mod.rs  types.rs
ui/: app.slint  container-details.slint  container.slint  containers.slint  create-container.slint  dashboard.slint  images.slint  network.slint  notification.slint  servers.slint  ssh-servers.slint  ssh-simple.slint  ssh_config.slint  volumes.slint
