[package]
name = "teste-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.6"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.98"
bollard = "0.19.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
plotters = "0.3"

[build-dependencies]
slint-build = "1.6"
