[package]
name = "teste_docker"
version = "0.1.0"
edition = "2024"

[lib]
name = "teste_docker"
path = "src/lib.rs"

[dependencies]
slint = "1.6"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.98"
bollard = "0.19.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
plotters = "0.3"
ssh2 = "0.9"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"

[build-dependencies]
slint-build = "1.6"

[[example]]
name = "ssh_test"
path = "examples/ssh_test.rs"

[[example]]
name = "ssh_monitor"
path = "examples/ssh_monitor.rs"

[[example]]
name = "remote_docker_test"
path = "examples/remote_docker_test.rs"
